--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,49 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+}
+.bannerList {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.banner i {
+  margin-top: 10px;
+  padding: 10px;
+  font-size: 64px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.input input{
+  height: 40px;
+  /*
+  background-color: #6d3d97;
+  border: 1px solid white;
+  border-radius: 5px;
+  */
+  margin-top: 10px;
+  margin-right: 10px;
+  padding: 0 5px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.input select {
+  padding: 0 5px;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 
-.App-intro {
-  font-size: large;
+.input button {
+  margin-top: 10px;
+  height: 40px;
+  vertical-align: middle;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.listitem {
+  margin-top: 5px;
+}
+.listitem img {
+  border-radius: 5px;
+  width: 100px;
+  height: 100px;
 }
